k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coinupfront
spec:
  selector:
    app: coinupfront
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
